assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 144 conflicts: 9 shift/reduce
State 156 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS error ';' class

    7 dummy_feature_list: %empty
    8                   | dummy_feature
    9                   | dummy_feature_list dummy_feature
   10                   | dummy_feature_list error ';'

   11 dummy_feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}' ';'
   12              | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   13              | OBJECTID ':' TYPEID ';'
   14              | OBJECTID ':' TYPEID ASSIGN expression ';'
   15              | OBJECTID error ';' dummy_feature

   16 formal_list: formal
   17            | formal_list ',' formal

   18 formal: OBJECTID ':' TYPEID

   19 block_expression_list: expression ';'
   20                      | block_expression_list expression ';'
   21                      | block_expression_list error ';'

   22 dispatch_expression_list: expression
   23                         | dispatch_expression_list ',' expression

   24 let_expression: OBJECTID ':' TYPEID IN expression
   25               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   26               | OBJECTID ':' TYPEID ',' let_expression
   27               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   28               | error ',' let_expression

   29 case_list: case
   30          | case_list case

   31 case: OBJECTID ':' TYPEID DARROW expression ';'

   32 expression: OBJECTID ASSIGN expression
   33           | expression '@' TYPEID '.' OBJECTID '(' ')'
   34           | expression '.' OBJECTID '(' ')'
   35           | OBJECTID '(' ')'
   36           | expression '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression '.' OBJECTID '(' dispatch_expression_list ')'
   38           | OBJECTID '(' dispatch_expression_list ')'
   39           | IF expression THEN expression ELSE expression FI
   40           | WHILE expression LOOP expression POOL
   41           | '{' block_expression_list '}'
   42           | LET let_expression
   43           | CASE expression OF case_list ESAC
   44           | NEW TYPEID
   45           | ISVOID expression
   46           | expression '+' expression
   47           | expression '-' expression
   48           | expression '*' expression
   49           | expression '/' expression
   50           | '~' expression
   51           | expression '<' expression
   52           | expression '=' expression
   53           | expression LE expression
   54           | NOT expression
   55           | '(' expression ')'
   56           | OBJECTID
   57           | INT_CONST
   58           | STR_CONST
   59           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 12 33 34 35 36 37 38 55
    ')' (41) 11 12 33 34 35 36 37 38 55
    '*' (42) 48
    '+' (43) 46
    ',' (44) 17 23 26 27 28
    '-' (45) 47
    '.' (46) 33 34 36 37
    '/' (47) 49
    ':' (58) 11 12 13 14 18 24 25 26 27 31
    ';' (59) 4 5 6 10 11 12 13 14 15 19 20 21 31
    '<' (60) 51
    '=' (61) 52
    '@' (64) 33 36
    '{' (123) 4 5 11 12 41
    '}' (125) 4 5 11 12 41
    '~' (126) 50
    error (256) 6 10 15 21 28
    CLASS (258) 4 5 6
    ELSE (259) 39
    FI (260) 39
    IF (261) 39
    IN (262) 24 25
    INHERITS (263) 5
    LET (264) 42
    LOOP (265) 40
    POOL (266) 40
    THEN (267) 39
    WHILE (268) 40
    CASE (269) 43
    ESAC (270) 43
    OF (271) 43
    DARROW (272) 31
    NEW (273) 44
    ISVOID (274) 45
    STR_CONST <symbol> (275) 58
    INT_CONST <symbol> (276) 57
    BOOL_CONST <boolean> (277) 59
    TYPEID <symbol> (278) 4 5 11 12 13 14 18 24 25 26 27 31 33 36 44
    OBJECTID <symbol> (279) 11 12 13 14 15 18 24 25 26 27 31 32 33 34 35 36 37 38 56
    ASSIGN (280) 14 25 27 32
    NOT (281) 54
    LE (282) 53
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3 6
    dummy_feature_list <features> (49)
        on left: 7 8 9 10
        on right: 4 5 9 10
    dummy_feature <feature> (50)
        on left: 11 12 13 14 15
        on right: 8 9 15
    formal_list <formals> (51)
        on left: 16 17
        on right: 12 17
    formal <formal> (52)
        on left: 18
        on right: 16 17
    block_expression_list <expressions> (53)
        on left: 19 20 21
        on right: 20 21 41
    dispatch_expression_list <expressions> (54)
        on left: 22 23
        on right: 23 36 37 38
    let_expression <expression> (55)
        on left: 24 25 26 27 28
        on right: 26 27 28 42
    case_list <cases> (56)
        on left: 29 30
        on right: 30 43
    case <case_> (57)
        on left: 31
        on right: 29 30
    expression <expression> (58)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 11 12 14 19 20 22 23 24 25 27 31 32 33 34 36 37 39 40 43 45 46 47 48 49 50 51 52 53 54 55


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS . error ';' class

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error . ';' class

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error ';' . class

    CLASS  shift, and go to state 1

    class  go to state 12


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 7 (dummy_feature_list)]
    $default  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 15
    dummy_feature       go to state 16


State 12

    6 class: CLASS error ';' class .

    $default  reduce using rule 6 (class)


State 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 17


State 14

   11 dummy_feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}' ';'
   12              | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   13              | OBJECTID . ':' TYPEID ';'
   14              | OBJECTID . ':' TYPEID ASSIGN expression ';'
   15              | OBJECTID . error ';' dummy_feature

    error  shift, and go to state 18
    '('    shift, and go to state 19
    ':'    shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'
    9 dummy_feature_list: dummy_feature_list . dummy_feature
   10                   | dummy_feature_list . error ';'

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 22

    dummy_feature  go to state 23


State 16

    8 dummy_feature_list: dummy_feature .

    $default  reduce using rule 8 (dummy_feature_list)


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 7 (dummy_feature_list)]
    $default  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 24
    dummy_feature       go to state 16


State 18

   15 dummy_feature: OBJECTID error . ';' dummy_feature

    ';'  shift, and go to state 25


State 19

   11 dummy_feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}' ';'
   12              | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 26
    ')'       shift, and go to state 27

    formal_list  go to state 28
    formal       go to state 29


State 20

   13 dummy_feature: OBJECTID ':' . TYPEID ';'
   14              | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 30


State 21

   10 dummy_feature_list: dummy_feature_list error . ';'

    ';'  shift, and go to state 31


State 22

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 32


State 23

    9 dummy_feature_list: dummy_feature_list dummy_feature .

    $default  reduce using rule 9 (dummy_feature_list)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'
    9 dummy_feature_list: dummy_feature_list . dummy_feature
   10                   | dummy_feature_list . error ';'

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 33

    dummy_feature  go to state 23


State 25

   15 dummy_feature: OBJECTID error ';' . dummy_feature

    OBJECTID  shift, and go to state 14

    dummy_feature  go to state 34


State 26

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 35


State 27

   11 dummy_feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 36


State 28

   12 dummy_feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   17 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


State 29

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


State 30

   13 dummy_feature: OBJECTID ':' TYPEID . ';'
   14              | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 39
    ';'     shift, and go to state 40


State 31

   10 dummy_feature_list: dummy_feature_list error ';' .

    $default  reduce using rule 10 (dummy_feature_list)


State 32

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 41


State 34

   15 dummy_feature: OBJECTID error ';' dummy_feature .

    $default  reduce using rule 15 (dummy_feature)


State 35

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 42


State 36

   11 dummy_feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 43


State 37

   12 dummy_feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 44


State 38

   17 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 45


State 39

   14 dummy_feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 60


State 40

   13 dummy_feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 13 (dummy_feature)


State 41

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 42

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


State 43

   11 dummy_feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 61


State 44

   12 dummy_feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 62


State 45

   17 formal_list: formal_list ',' formal .

    $default  reduce using rule 17 (formal_list)


State 46

   39 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 63


State 47

   42 expression: LET . let_expression

    error     shift, and go to state 64
    OBJECTID  shift, and go to state 65

    let_expression  go to state 66


State 48

   40 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 67


State 49

   43 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 68


State 50

   44 expression: NEW . TYPEID

    TYPEID  shift, and go to state 69


State 51

   45 expression: ISVOID . expression

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 70


State 52

   58 expression: STR_CONST .

    $default  reduce using rule 58 (expression)


State 53

   57 expression: INT_CONST .

    $default  reduce using rule 57 (expression)


State 54

   59 expression: BOOL_CONST .

    $default  reduce using rule 59 (expression)


State 55

   32 expression: OBJECTID . ASSIGN expression
   35           | OBJECTID . '(' ')'
   38           | OBJECTID . '(' dispatch_expression_list ')'
   56           | OBJECTID .

    ASSIGN  shift, and go to state 71
    '('     shift, and go to state 72

    $default  reduce using rule 56 (expression)


State 56

   54 expression: NOT . expression

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 73


State 57

   50 expression: '~' . expression

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 74


State 58

   41 expression: '{' . block_expression_list '}'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    block_expression_list  go to state 75
    expression             go to state 76


State 59

   55 expression: '(' . expression ')'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 77


State 60

   14 dummy_feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   33 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   34           | expression . '.' OBJECTID '(' ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression . '.' OBJECTID '(' dispatch_expression_list ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . '=' expression
   53           | expression . LE expression

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '.'  shift, and go to state 85
    '@'  shift, and go to state 86
    ';'  shift, and go to state 87


State 61

   11 dummy_feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}' ';'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 88


State 62

   12 dummy_feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 89


State 63

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   34           | expression . '.' OBJECTID '(' ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression . '.' OBJECTID '(' dispatch_expression_list ')'
   39           | IF expression . THEN expression ELSE expression FI
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . '=' expression
   53           | expression . LE expression

    THEN  shift, and go to state 90
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '.'   shift, and go to state 85
    '@'   shift, and go to state 86


State 64

   28 let_expression: error . ',' let_expression

    ','  shift, and go to state 91


State 65

   24 let_expression: OBJECTID . ':' TYPEID IN expression
   25               | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   26               | OBJECTID . ':' TYPEID ',' let_expression
   27               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ':'  shift, and go to state 92


State 66

   42 expression: LET let_expression .

    $default  reduce using rule 42 (expression)


State 67

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   34           | expression . '.' OBJECTID '(' ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   37           | expression . '.' OBJECTID '(' dispatch_expression_list ')'
   40           | WHILE expression . LOOP expression POOL
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . '=' expression
   53           | expression . LE expression

    LOOP  shift, and go to state 93
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '.'   shift, and go to state 85
    '@'   shift, and go to state 86


State 68
